# rag

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  API.md  Dockerfile  pyproject.toml
backend/alembic/versions/: 20260430_add_chunk_type_fields.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: dashboard.py  documents.py  evals.py  feedback.py  health.py  knowledge_spaces.py  queries.py  sessions.py  sources.py
backend/app/core/: config.py
backend/app/db/: runtime_schema.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: common.py  documents.py  evals.py  feedback.py  queries.py  sessions.py
backend/app/services/: answering.py  chunking.py  chunking_factory.py  container.py  evaluation.py  indexing.py  ingestion.py  llm.py  object_storage.py  parser.py  text_utils.py
backend/app/services/chunking_strategies/: __init__.py  base.py  fixed_size.py  parent_child.py  semantic.py
backend/app/workflows/: __init__.py  activities.py  definitions.py  executor.py  orchestrator.py  worker.py
backend/scripts/: migrate_existing_traces.py
backend/tests/: test_api.py  test_chunking_strategies.py  test_config_env.py  test_embedding_provider.py  test_opensearch_backend.py  test_parent_child_integration.py  test_search_backend_config.py  test_semantic_chunking_integration.py  test_worker_config.py
backend/tests/benchmarks/: test_chunking_performance.py
docs/: 01-architecture-overview.md  02-data-model-and-api.md  04-temporal-async-jobs.md  (+8 more)
(+55 files in other folders)
