[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-backend"
version = "0.1.0"
description = "Enterprise RAG knowledge hub backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "psycopg[binary]>=3.1.19,<4.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "temporalio>=1.7.0,<2.0.0",
  "minio>=7.2.7,<8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]
docling = [
  "docling>=2.0.0,<3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
